# gdut-course-grabber

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build.yml  copy_release.yml  release.yml
scripts/: pack.sh
src/gdut_course_grabber/: __main__.py  application.py
src/gdut_course_grabber/api/: exc.py
src/gdut_course_grabber/api/eas/: __init__.py
src/gdut_course_grabber/core/grabber/: __init__.py
src/gdut_course_grabber/models/: __init__.py
src/gdut_course_grabber/utils/eas/: __init__.py
static/: index.html
static/js/: scripts.js
