[project]
name = "GDUTCourseGrabber"
version = "3.1.0"
description = "广东工业大学（GDUT）抢课助手，发挥计算机的力量，让你抢课解放双手，快人一步"
authors = [
    {name = "Ricky8955555", email = "rkmiao@duck.com"},
    {name = "Pesy Wu", email = "GamerNoTitle@outlook.com"},
    {name = "Ron1337", email = "zzpengroot@outlook.com"},
    {name = "keqingmoe", email = "me@keqing.moe"},
]
dependencies = [
    "fastapi[standard]~=0.115.0",
    "httpx~=0.28.0",
    "platformdirs~=4.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "AGPL-3.0"}

[project.optional-dependencies]
pack = [
    "pyinstaller>=6.14.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pylint>=3.3.3",
]
